--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="./styles.css"/>
+        <link rel="stylesheet" href="styles.css"/>
         <title>Résumé</title>
     </head>
     <body>
@@ -13,7 +13,6 @@
                     <div class="resume__block">
                         <h1 class="contact-info__header">Bulka</h1>
                         <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
-
                         <div class="contact_info_container fh">
                             <div class="contact-info__block">
                                 <a href="" rel="author" class="contact-info__item">
@@ -29,11 +28,9 @@
                                     <span>Lviv, Ukraine</span>
                                 </a>
                             </div>
-
                             <div class="contact-info__block contact-info__block--center">
                                 <img class="contact-info__avatar" src="assets/bsa-cat.jpeg" alt="Avatar" />
                             </div>
-
                             <div class="contact-info__block">
                                 <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
                                     class="contact-info__item">
