--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="styles.css"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
         <title>Résumé</title>
     </head>
     <body>
@@ -29,7 +29,7 @@
                                 </a>
                             </div>
                             <div class="contact-info__block contact-info__block--center">
-                                <img class="contact-info__avatar" src="assets/bsa-cat.jpeg" alt="Avatar" />
+                                <img class="contact-info__avatar" src="assets/bsa-cat.jpeg" alt="Avatar">
                             </div>
                             <div class="contact-info__block">
                                 <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
